# macro-scripting-lang

./: CMakeLists.txt  LICENSE.md  README.md  Utils.cpp  Utils.h  Validator.cpp  Validator.h  main.cpp
keyword/: Keyword.cpp  Keyword.h
task/: MouseClickTask.cpp  MouseClickTask.h  MoveMouseTask.cpp  MoveMouseTask.h  MoveTask.cpp  MoveTask.h  PressTask.cpp  PressTask.h  Task.cpp  Task.h  WaitTask.cpp  WaitTask.h  WriteTask.cpp  WriteTask.h
token/: Token.cpp  Token.h  TokenType.cpp  TokenType.h
